[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deribit-trading-sdk"
version = "0.1.1"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "The unofficial Deribit API SDK, by Tribulnation. Compatible with Trading SDK."
dependencies = [
  "lazy-loader", "httpx", "websockets", "pydantic",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/tribulnation/deribit.git"

[project.optional-dependencies]
sdk = ["trading-sdk"]
orjson = ["orjson"]
